@@ -10,7 +10,7 @@ import org.apache.openjpa.enhance.FieldSupplier;
 import org.apache.openjpa.enhance.RedefinitionHelper;
 import org.apache.openjpa.enhance.PersistenceCapable;
 import org.apache.openjpa.enhance.PCRegistry;
-import org.apache.commons.lang.StringUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.openjpa.enhance.StateManager;
 import javax.persistence.TemporalType;
 import javax.persistence.Temporal;
@@ -469,11 +469,11 @@ public class CachedFacility extends AbstractModel<Integer> implements Persistenc
     }
     
     public void pcCopyKeyFieldsFromObjectId(final FieldConsumer fieldConsumer, final Object o) {
-        fieldConsumer.storeObjectField(7 + CachedFacility.pcInheritedFieldCount, (Object)new Integer(((IntId)o).getId()));
+        fieldConsumer.storeObjectField(7 + CachedFacility.pcInheritedFieldCount, (Object)Integer.valueOf(((IntId)o).getId()));
     }
     
     public void pcCopyKeyFieldsFromObjectId(final Object o) {
-        this.integratorFacilityId = new Integer(((IntId)o).getId());
+        this.integratorFacilityId = Integer.valueOf(((IntId)o).getId());
     }
     
     public Object pcNewObjectIdInstance(final Object o) {
